Fix header alignment without back button

--- a/www/scss/app.scss
+++ b/www/scss/app.scss
@@ -56,6 +56,10 @@ x-appbar {
         background: none;
         display: none;
     }
+
+    x-appbar > header:after {
+        padding-left: 0;
+    }
 }
 
 //Notification
